--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,15 +1,23 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/base.css'  %}">
+{#    <link rel="stylesheet" href="/static/css/base.css">#}
+{#导入 css#}
+    {% block head_extend %}{% endblock %}
 </head>
 <body>
-<div>
-    <a href="{% url 'home' %}"><h3>个人博客网站2</h3></a>
+<div class="nav">
+    <a class="logo" href="{% url 'home' %}"><h3>个人博客网站</h3></a>
+    <a href="/">首页</a>
+    <a href="{% url 'blog_list' %}">博客</a>
 
 </div>
-<hr>
 {% block content %}{% endblock %}
+
 </body>
 </html>
