添加 导航栏

--- a/mysite/templates/blog/blog_detail.html
+++ b/mysite/templates/blog/blog_detail.html
@@ -3,6 +3,8 @@
     my site
 
 {% endblock %}
+{% block nav_blog_active %}active{% endblock %}
+
 {% block content %}
         <a href="{% url 'blog_detail' blog.id %}">{{ blog.title }}</a>
         <p>作者:{{ blog.author }}</p>
