--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -9,7 +9,7 @@
 {% block head_extend %}
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
 {% endblock %}
-
+{% block nav_index_active %}active{% endblock %}
 {% block content %}
     <h3 class="index">欢迎访问我的网站</h3>
     <style type="text/css">
