--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,22 +1,44 @@
 {% load staticfiles %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/base.css'  %}">
-{#    <link rel="stylesheet" href="/static/css/base.css">#}
+    <link rel="stylesheet" href="{% static 'bootstrap-3.4.1/css/bootstrap.min.css' %}">
+    <script type="text/javascript" src="{% static 'jquery-1.12.4.min.js' %}"></script>
+
+    <script type="text/javascript" src="{% static 'bootstrap-3.4.1/js/bootstrap.min.js' %}"></script>
+
+    {#    <link rel="stylesheet" href="/static/css/base.css">#}
 {#导入 css#}
     {% block head_extend %}{% endblock %}
 </head>
 <body>
-<div class="nav">
-    <a class="logo" href="{% url 'home' %}"><h3>个人博客网站</h3></a>
-    <a href="/">首页</a>
-    <a href="{% url 'blog_list' %}">博客</a>
+<div class="navbar navbar-defult navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'home' %}">个人博客网站</a>
+            <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div id="navbar-collapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="{% block nav_index_active %}{% endblock %}"><a href="/">首页</a></li>
+                <li class="{% block nav_blog_active %}{% endblock %}"><a href="{% url 'blog_list' %}">博客</a></li>
+            </ul>
+        </div>
+
+    </div>
 
 </div>
+
 {% block content %}{% endblock %}
 
 </body>
