--- a/mysite/templates/blog/blog_detail_type_name.html
+++ b/mysite/templates/blog/blog_detail_type_name.html
@@ -3,6 +3,8 @@
     {{ blog_type.type_name }}
 
 {% endblock %}
+{% block nav_index_active %}active{% endblock %}
+
 {% block content %}
     {% for blog in blogs %}
         <a href="{% url 'blog_detail' blog.id %}">{{ blog.title }}</a>
