--- a/mysite/templates/blog/blog_list.html
+++ b/mysite/templates/blog/blog_list.html
@@ -3,6 +3,8 @@
     my_blog
 
 {% endblock %}
+{% block nav_blog_active %}active{% endblock %}
+
 {% block content %}
     {% for blog in blogs %}
         <a href="{% url 'blog_detail' blog.id %}">{{ blog.title }}</a>
