添加 导航栏

--- a/mysite/templates/blog/blog_detail_type_name.html
+++ b/mysite/templates/blog/blog_detail_type_name.html
@@ -3,7 +3,7 @@
     {{ blog_type.type_name }}
 
 {% endblock %}
-{% block nav_index_active %}active{% endblock %}
+{% block nav_blog_active %}active{% endblock %}
 
 {% block content %}
     {% for blog in blogs %}
