--- a/mysite/templates/blog/blog_detail.html
+++ b/mysite/templates/blog/blog_detail.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}
     my site
-
 {% endblock %}
+
 {% block nav_blog_active %}active{% endblock %}
 
 {% block content %}
@@ -10,7 +10,7 @@
         <p>作者:{{ blog.author }}</p>
         <p>发表日期:{{ blog.last_update_time|date:"Y-m-d H:i:s" }}</p>
         <a href="{% url 'blog_detail_type_name' blog.blog_type.id %}">分类:{{ blog.blog_type }}</a>
-        <p>{{ blog.content|truncatechars:10 }}</p>
+        <p>{{ blog.content}}</p>
 
 {% endblock %}
 
