--- a/mysite/blog/templates/blog/blog_detail_type_name.html
+++ b/mysite/blog/templates/blog/blog_detail_type_name.html
@@ -3,5 +3,5 @@
     {{ blog_type.type_name }}
 
 {% endblock %}
-{% block blog_list_title %}分类:{{ blog_type.type_name }}(一共{{ blogs|length }}篇博客){% endblock %}
+{% block blog_list_title %}分类:{{ blog_type.type_name }}{% endblock %}
 
