--- a/mysite/blog/templates/blog/blog_list.html
+++ b/mysite/blog/templates/blog/blog_list.html
@@ -16,7 +16,7 @@
            <div class="col-xs-12 col-sm-8 col-md-9 col-lg-10">
                <div class="panel panel-default">
                    <div class="panel-heading">
-                    {% block blog_list_title %}博客列表(一共{{ page_of_blogs.paginator.count }}篇博客){% endblock %}
+                    {% block blog_list_title %}博客列表{% endblock %}
                    </div>
                    <div class="panel-body">
                        {% for blog in page_of_blogs.object_list %}
@@ -39,7 +39,7 @@
 
                    </div>
                </div>
-           <div>
+           <div class="paginator">
                <ul class="pagination">
                    <li>
                        {% if page_of_blogs.has_previous %}
@@ -51,8 +51,14 @@
                        {% endif %}
                    </li>
 
-                   {% for page_num in page_of_blogs.paginator.page_range %}
-                   <li><a href="?page={{ page_num }}">{{ page_num }}</a></li>
+                   {% for page_num in page_range %}
+                        {% if page_num == page_of_blogs.number %}
+                            <li class="active"><span>{{ page_num }}</span></li>
+                        {% elif page_num == '...' %}
+                            <li><span>{{ page_num }}</span></li>
+                        {% else %}
+                       <li><a href="?page={{ page_num }}">{{ page_num }}</a></li>
+                        {% endif %}
                    {% endfor %}
                    <li>
                        {% if page_of_blogs.has_next %}
@@ -65,6 +71,11 @@
 
                      </li>
                </ul>
+           <p>
+               共有{{ page_of_blogs.paginator.count }}篇博客,
+               当前第{{ page_of_blogs.number }}页,
+               共有{{ page_of_blogs.paginator.num_pages }}页
+           </p>
 
            </div>
 
