--- a/mysite/blog/templates/blog/blog_detail.html
+++ b/mysite/blog/templates/blog/blog_detail.html
@@ -19,7 +19,23 @@
                 <li>分类:<a href="{% url 'blog_detail_type_name' blog.blog_type.id %}">{{ blog.blog_type }}</a></li>
                 <li>发表日期:{{ blog.last_update_time|date:"Y-m-d H:i:s" }}</li>
                 </ul>
-                <div class="blog-content">{{ blog.content }}</div>
+                <div class="blog-content">{{ blog.content |safe }}</div>
+                <div class="blog-more">
+                    <p>上一篇:
+                    {% if previous_blog %}
+                        <a href="{% url 'blog_detail' previous_blog.id  %}">{{ previous_blog.title }}</a>
+                    {% else %}
+                        没有了
+                    {% endif %}
+                    </p>
+                    <p>下一篇:
+                        {% if next_blog %}
+                            <a href="{% url 'blog_detail' next_blog.id %}">{{ next_blog.title }}</a>
+                        {% else %}
+                            没有了
+                        {% endif %}
+                    </p>
+                </div>
             </div>
         </div>
     </div>
