--- a/mysite/blog/templates/blog/blog_detail.html
+++ b/mysite/blog/templates/blog/blog_detail.html
@@ -18,6 +18,7 @@
                 <li>作者:{{ blog.author }}</li>
                 <li>分类:<a href="{% url 'blog_detail_type_name' blog.blog_type.id %}">{{ blog.blog_type }}</a></li>
                 <li>发表日期:{{ blog.last_update_time|date:"Y-m-d H:i:s" }}</li>
+                <li>阅读({{ blog.readed_num }})</li>
                 </ul>
                 <div class="blog-content">{{ blog.content |safe }}</div>
                 <div class="blog-more">
