--- a/mysite/blog/templates/blog/blog_list.html
+++ b/mysite/blog/templates/blog/blog_list.html
@@ -25,10 +25,9 @@
                                 {#    <p>{{ blog.title }}</p>#}
                                 <p class="blog-info">
                                     <span class="glyphicon glyphicon-tag"></span><a
-                                        href="{% url 'blog_detail_type_name' blog.blog_type.id %}">{{ blog.blog_type }}</a>
+                                        href="{% url 'blog_detail_type_name' blog.blog_type.id %}">{{ blog.blog_type }}</a>&nbsp;&nbsp;
 
-                                    <span class="glyphicon glyphicon-time"></span>:{{ blog.last_update_time|date:"Y-m-d H:i:s" }}
-                                </p>
+                                    <span class="glyphicon glyphicon-time"></span>:{{ blog.last_update_time|date:"Y-m-d H:i:s" }}&nbsp;&nbsp;阅读({{ blog.readed_num }})</p>
                                 <p>{{ blog.content|striptags|truncatechars:120}}</p>
                             </div>
 
@@ -91,7 +90,7 @@
                         <ul class="blog_types">
                             {% for blog_type in blog_types %}
                                 <li>
-                                    <a href="{% url 'blog_detail_type_name' blog_type.id %}">{{ blog_type.type_name }}({{ blog_type.blog_count  }})</a>
+                                    <a href="{% url 'blog_detail_type_name' blog_type.id %}">{{ blog_type.type_name }}({{ blog_type.blog_count }})</a>
                                 </li>
                                 {% empty %}
                                 <li>暂无分类</li>
