优化博客阅读计数

--- a/mysite/blog/templates/blog/blog_list.html
+++ b/mysite/blog/templates/blog/blog_list.html
@@ -27,7 +27,7 @@
                                     <span class="glyphicon glyphicon-tag"></span><a
                                         href="{% url 'blog_detail_type_name' blog.blog_type.id %}">{{ blog.blog_type }}</a>&nbsp;&nbsp;
 
-                                    <span class="glyphicon glyphicon-time"></span>:{{ blog.last_update_time|date:"Y-m-d H:i:s" }}&nbsp;&nbsp;阅读({{ blog.readed_num }})</p>
+                                    <span class="glyphicon glyphicon-time"></span>:{{ blog.last_update_time|date:"Y-m-d H:i:s" }}&nbsp;&nbsp;阅读({{ blog.get_read_num }})</p>
                                 <p>{{ blog.content|striptags|truncatechars:120}}</p>
                             </div>
 
