--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -3,16 +3,54 @@
 
 
 {% block title %}
-我的网站|首页
+    我的网站|首页
 {% endblock %}
 
 {% block head_extend %}
     <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <script src="https://code.hcharts.cn/highcharts.js"></script>
 {% endblock %}
 {% block nav_index_active %}active{% endblock %}
 {% block content %}
     <h3 class="index">欢迎访问我的网站</h3>
-    <style type="text/css">
+    {#    图标容器#}
+    <div id="container"></div>
+    <script>
+        // 图表配置
+        var options = {
+            chart: {
+                type: 'line'                          //指定图表的类型，默认是折线图（line）
+            },
+            title: {
+                text: null              // 标题
+            },
+            xAxis: {
+                categories: {{dates|safe}},   // x 轴分类
+                tickmarkPlacement: 'on'
+            },
+            yAxis: {
+                title: {
+                    text: null                // y 轴标题
+                },
+                labels: {enabled: false},
+                gridLineDashStyle: 'Dash',
+            },
+            series: [{                              // 数据列
+                name: '阅读量',                        // 数据列名
+                data: {{read_nums}}                     // 数据
+            }],
+            plotOptions: {
+                line: {
+                    dataLabels: {
+                        enabled: true
+                    }
+                }
+            },
+            legend: {enabled: false},
+            credits: {enabled: false},
+        };
+        var chart = Highcharts.chart('container', options);
 
-    </style>
+    </script>
+
 {% endblock %}
